<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:infchandroid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.testing.MainActivity" >

    <item
        android:id="@+id/action_thread_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        infchandroid:actionViewClass="android.support.v7.widget.SearchView"
        infchandroid:showAsAction="ifRoom"/>
        />

    <!-- Refresh -->
    <item
        android:id="@+id/action_thread_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_refresh"
        infchandroid:showAsAction="ifRoom"/>

    <!-- Subject Only -->
    <item
        android:id="@+id/action_thread_subjectonly"
        android:icon="@drawable/ic_subjectonly_off"
        android:title="@string/action_subjectonly"
        infchandroid:showAsAction="ifRoom"/>

    <!-- ThreadWatcher -->
    <item
        android:id="@+id/action_thread_watchthread"
        android:icon="@drawable/ic_threadwatcher_off"
        android:title="@string/action_refresh"
        infchandroid:showAsAction="ifRoom"/>
    
<!-- Save -->
    <item
        android:id="@+id/action_thread_save"
        android:icon="@drawable/img_saved"
        android:title="@string/action_save"
        infchandroid:showAsAction="ifRoom"/>
    
    <!-- Halp Button -->
    <item
        android:id="@+id/action_thread_help"
        android:icon="@drawable/ic_help"
        android:title="@string/action_help"
        infchandroid:showAsAction="ifRoom"/>

</menu>